# digital_twin_like

./: AUTO_CONTINUE_UPDATE.md  HW4_WRITEUP.md  KNOWLEDGE_BASE_README.md  PROJECT_SUMMARY.md  QUICKSTART.md  README.md  VOICE_CLONING_GUIDE.md  VOICE_README.md  WRITEUP.md  demo_voice_twin.py  pyproject.toml  record_voice_sample.py  test_knowledge_base.py  test_tts_only.py  test_voice_system.py
knowledge/: tim_bio.md  tim_research.md  tim_skills.md
src/digital_twin_like/: advanced_tts.py  crew.py  run_voice.py  speech_to_text.py  text_to_speech.py  voice_agent.py
src/digital_twin_like/config/: agents.yaml
src/digital_twin_like/tools/: knowledge_tool.py
